# QtSQLCrud

./: .gitignore  CMakeLists.txt  CustomTextField.qml  Main.qml  backendhelper.cpp  backendhelper.h  main.cpp
